--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^7.0.12",
+    "openai": "^6.22.0",
     "resend": "^6.9.2",
     "stripe": "^20.3.0"
   },
